<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.imageDetails.ImageDetailsFragment">

    <ImageView
        android:id="@+id/selectedImage"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:contentDescription="@string/selected_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/owner_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/owner"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectedImage" />

    <TextView
        android:id="@+id/user_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="21sp"
        app:layout_constraintStart_toEndOf="@+id/owner_tv"
        app:layout_constraintTop_toBottomOf="@+id/selectedImage"
        tools:text="Image Details" />

    <TextView
        android:id="@+id/views_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/views"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/owner_tv" />

    <TextView
        android:id="@+id/views_value_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="21sp"
        app:layout_constraintStart_toEndOf="@+id/views_tv"
        app:layout_constraintTop_toBottomOf="@+id/owner_tv"
        tools:text="Image Details" />

    <TextView
        android:id="@+id/downloads_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/downloads"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/views_tv" />

    <TextView
        android:id="@+id/downloads_value_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="21sp"
        app:layout_constraintStart_toEndOf="@+id/downloads_tv"
        app:layout_constraintTop_toBottomOf="@+id/views_tv"
        tools:text="Image Details" />

    <TextView
        android:id="@+id/collections_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/collections"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/downloads_tv" />

    <TextView
        android:id="@+id/collections_value_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="21sp"
        app:layout_constraintStart_toEndOf="@+id/collections_tv"
        app:layout_constraintTop_toBottomOf="@+id/downloads_tv"
        tools:text="Image Details" />

    <TextView
        android:id="@+id/likes_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/likes"
        android:textStyle="bold"
        android:textSize="21sp"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/collections_tv"/>

    <TextView
        android:id="@+id/likes_value_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="21sp"
        android:layout_margin="10dp"
        app:layout_constraintStart_toEndOf="@+id/likes_tv"
        app:layout_constraintTop_toBottomOf="@+id/collections_tv"
        tools:text="Image Details" />

    <TextView
        android:id="@+id/comments_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comments"
        android:textStyle="bold"
        android:textSize="21sp"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/likes_tv"/>

    <TextView
        android:id="@+id/comments_value_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="21sp"
        android:layout_margin="10dp"
        app:layout_constraintStart_toEndOf="@+id/comments_tv"
        app:layout_constraintTop_toBottomOf="@+id/likes_tv"
        tools:text="Image Details" />

</androidx.constraintlayout.widget.ConstraintLayout>